Won't open blend files with non-Latin charasters in the name #41629

Closed
opened 2014-08-29 12:16:53 +02:00 by Mikhail Rachinskiy · 13 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2
Vendor: NVIDIA Corporation
Version: 4.4.0

Blender Version
Broken: 2.71.5 e2c412f

Short description of error
New builds failed to open by double clicking associated blend files with non-Latin charasters in the name of these files.
File -> Open is working.

Exact steps for others to reproduce the error

  • Unzip and open attached blend file by double clicking non_latin.7z, if failed you should see a default startup scene
  • Now open the same file by File -> Open, should always work

GIF animation to illustrate the issue:
Untitled.gif

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 Vendor: NVIDIA Corporation Version: 4.4.0 **Blender Version** Broken: 2.71.5 e2c412f **Short description of error** New builds failed to open by double clicking associated blend files with non-Latin charasters in the name of these files. File -> Open is working. **Exact steps for others to reproduce the error** - Unzip and open attached blend file by double clicking [non_latin.7z](https://archive.blender.org/developer/F107268/non_latin.7z), if failed you should see a default startup scene - Now open the same file by File -> Open, should always work GIF animation to illustrate the issue: ![Untitled.gif](https://archive.blender.org/developer/F107269/Untitled.gif)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Sergey Sharybin was assigned by Bastien Montagne 2014-08-29 12:25:00 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Sergey, I would suspect this could be due to new 'launcher' helper on win platform?

Sergey, I would suspect this could be due to new 'launcher' helper on win platform?

Could be but i can't reproduce the issue here.

Are there any error messages in the console?

Could be but i can't reproduce the issue here. Are there any error messages in the console?
Author
Member

Yeah, this could be Windows issue because I do not have Russian locale installed
27.png

Yeah, this could be Windows issue because I do not have Russian locale installed ![27.png](https://archive.blender.org/developer/F107281/27.png)

Iv'e just committed a bit related change, which fixes issue with blender.exe -r registering blender-app.exe as the handler for .bend files (cb7d430).

For your thing i'm not really sure, did you type it manually to the console? I'm not really sure why you've got ? instead of actual letters.

Also, does the same issue currently happens with 2.71 official release?

Iv'e just committed a bit related change, which fixes issue with `blender.exe -r` registering `blender-app.exe` as the handler for .bend files (cb7d430). For your thing i'm not really sure, did you type it manually to the console? I'm not really sure why you've got ? instead of actual letters. Also, does the same issue currently happens with 2.71 official release?
Author
Member

Yes I typed it manually, guess it was silly move.

2.71 release is working, and if I will replace "blender.exe" on "blender-app.exe" in the Windows registry it would actually work! Thanks!

I think that "blender.exe" is no longer default executable file for the Windows platform should be announced/described somewhere, because some people like myself who are using ZIP archives instead of install packages will continue to associate their blend files with old "blender.exe", which would lead them to this problem.

Yes I typed it manually, guess it was silly move. 2.71 release is working, and if I will replace "blender.exe" on "blender-app.exe" in the Windows registry it would actually work! Thanks! I think that "blender.exe" is no longer default executable file for the Windows platform should be announced/described somewhere, because some people like myself who are using ZIP archives instead of install packages will continue to associate their blend files with old "blender.exe", which would lead them to this problem.

The thing is, you should use blender.exe, not blender-app.exe.

I need to know exact circumstances in which blender-app.exe loads file nicely and blender.exe does not.

The thing is, you should use blender.exe, not blender-app.exe. I need to know exact circumstances in which blender-app.exe loads file nicely and blender.exe does not.
Author
Member

Associated with blender.exe

HKEY_CLASSES_ROOT\Applications\blender.exe\shell\open\command
Key: (Default)
Value: "C:\Users\Mikhail\Downloads\b\blender.exe" "%1" - no difference if I change this to blender-app.exe manuallyHKEY_CLASSES_ROOT\blend_auto_file\shell\open\commandKey: (Default)
Value: "C:\Users\Mikhail\Downloads\b\blender.exe" "%1" - starts to work if I change this to blender-app.exe manually


Associated with blender-app.exe

HKEY_CLASSES_ROOT\Applications\blender-app.exe\shell\open\command
Key: (Default)
Value: "C:\Users\Mikhail\Downloads\b\blender-app.exe" "%1" - works as isHKEY_CLASSES_ROOT\blend_auto_file\shell\open\command**- entry not created**


Associated with blender.exe HKEY_CLASSES_ROOT\Applications\blender.exe\shell\open\command **Key:** (Default) **Value:** "C:\Users\Mikhail\Downloads\b\blender.exe" "%1" **- no difference if I change this to blender-app.exe manually**HKEY_CLASSES_ROOT\blend_auto_file\shell\open\command**Key:** (Default) **Value:** "C:\Users\Mikhail\Downloads\b\blender.exe" "%1" **- starts to work if I change this to blender-app.exe manually** ----------------------------- Associated with blender-app.exe HKEY_CLASSES_ROOT\Applications\blender-app.exe\shell\open\command **Key:** (Default) **Value:** "C:\Users\Mikhail\Downloads\b\blender-app.exe" "%1" **- works as is**HKEY_CLASSES_ROOT\blend_auto_file\shell\open\command**- entry not created** -----------------------------

This issue was referenced by 526ae635d1

This issue was referenced by 526ae635d191d0245fc2c0923130ed968891d6a0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 526ae635d1.

Closed by commit 526ae635d1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41629
No description provided.