Fix T41629: Won't open blend files with non-Latin charasters in the name